--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+image:https://travis-ci.com/bjanders/fpanels.svg?branch=master["Build Status", link="https://travis-ci.com/bjanders/fpanels"]
+
 = fpanels
 Go library for interacting with Logitech/Saitek flight panels
 
