--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,12 @@
+= fpanels - Go library for Logitech/Saitek flight panels
+:toc:
+
+[sidebar]
+.Code status
+--
 image:https://travis-ci.com/bjanders/fpanels.svg?branch=master["Build Status", link="https://travis-ci.com/bjanders/fpanels"]
 image:https://goreportcard.com/badge/github.com/bjanders/fpanels["Go Report Card", link="https://goreportcard.com/report/github.com/bjanders/fpanels"]
-
-= fpanels
-Go library for interacting with Logitech/Saitek flight panels
+--
 
 NOTE: This is work in progress. The code is useable, but not much tested. The API
 is likely to change. The library has only been tested on Linux so far.
