--- a/README.adoc
+++ b/README.adoc
@@ -11,12 +11,15 @@ image:https://goreportcard.com/badge/github.com/bjanders/fpanels["Go Report Card
 NOTE: This is work in progress. The code is useable, but not much tested. The API
 is likely to change. The library has only been tested on Linux so far.
 
-This python library provides codes for interfacing with the following
-Logitech/Saitek devices:
+This library provides code for interfacing with the following Logitech/Saitek
+devices:
 
 - Flight switch panel
 - Flight multi panel
 - Flight radio panel
+
+Multiple devices of the same type is not supported. For example, you will not
+be able to interact with two radio panels.
 
 == The panels
 
